--- a/src/app/pages/schedule/schedule.component.scss
+++ b/src/app/pages/schedule/schedule.component.scss
@@ -9,7 +9,7 @@
 }
 
 .schedule {
-  overflow-y: scroll;
+  overflow-y: visible;
 }
 
 table {
